--- a/_config.yml
+++ b/_config.yml
@@ -14,14 +14,14 @@ highlighter:      rouge
 # permalink:        pretty
 
 # Setup
-title:            "Xiaozhou's Notes"
+title:            "Pello's website"
 tagline:          ''
 description:      ''
 url:              https://pelloaspuru.github.io
 baseurl:          ''
 
 author:
-  name:           'Yang Xiaozhou'
+  name:           'Pello Aspuru'
 
 paginate:         10
 paginate_path:    "/blog/page:num/"
@@ -38,4 +38,4 @@ plugins:
   - jekyll-commonmark-ghpages
 
 disqus:
-  shortname: yangxiaozhou
+  shortname: pelloaspuru
