--- a/_data/social.yml
+++ b/_data/social.yml
@@ -24,6 +24,6 @@ linkedin:
 
 twitter:
   id: 'pelloaspuru'
-  href: 'https://www.twitter.com/user/'
+  href: 'https://www.twitter.com/'
   title: Twitter
   fa-icon: 'fab fa-twitter'
