change in website tag title.

--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ highlighter:      rouge
 
 # Setup
 title:            "Pello Aspuru"
-tagline:          'CEMFI'
-description:      'PhD candidate, CEMFI'
+tagline:          'NYU'
+description:      'Economics Fellow'
 url:              https://pelloaspuru.github.io
 baseurl:          ''
 
