--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ highlighter:      rouge
 
 # Setup
 title:            "Pello Aspuru"
-tagline:          'NYU'
-description:      'Economics Fellow'
+tagline:          'Vienna'
+description:      'Assistant Professor'
 url:              https://pelloaspuru.github.io
 baseurl:          ''
 
