--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ highlighter:      rouge
 
 # Setup
 title:            "Pello Aspuru"
-tagline:          'Vienna'
+tagline:          ''
 description:      'Assistant Professor'
 url:              https://pelloaspuru.github.io
 baseurl:          ''
