Update _config.yml, change tagline

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ highlighter:      rouge
 
 # Setup
 title:            "Pello Aspuru"
-tagline:          ''
+tagline:          'UniVie'
 description:      'Assistant Professor'
 url:              https://pelloaspuru.github.io
 baseurl:          ''
